# vibeharness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: test_agent.py  test_bash.py  test_bash_helpers.py  test_context_session.py  test_files.py  test_hooks.py  test_planning.py  test_pricing.py  test_repl_input.py  test_retry.py  test_streaming.py  test_subagent.py  test_tools_registry.py  test_ui_replay.py
vibeharness/: __init__.py  agent.py  cli.py  config.py  context.py  hooks.py  llm.py  permissions.py  planning.py  pricing.py  prompts.py  repl_input.py  retry.py  session.py  subagent.py  ui.py
vibeharness/tools/: __init__.py  bash.py  files.py
