[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeharness"
version = "0.1.0"
description = "A medium-weight terminal agent harness, à la Claude Code / Copilot CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jeanlag1" }]
keywords = ["agent", "llm", "cli", "anthropic", "openai", "claude", "tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anthropic>=0.39",
  "rich>=13.7",
  "typer>=0.12",
  "pexpect>=4.9",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
vibe = "vibeharness.cli:app"

[project.urls]
Homepage = "https://github.com/jeanlag1/vibeharness"
Issues = "https://github.com/jeanlag1/vibeharness/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibeharness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
